renamed from tiny_wiki_gem to tiny_wiki

--- a/lib/tiny_wiki/templates/layout.erb
+++ b/lib/tiny_wiki/templates/layout.erb
@@ -46,7 +46,7 @@
         <%= yield %>
 
         <footer>
-            <p>&copy; <%= Time.now.year %> <a href="https://github.com/erikyuzwa/tiny-wiki-gem" target="_blank">Tiny Wiki Gem</a>. All rights reserved.</p>
+            <p>&copy; <%= Time.now.year %> <a href="https://github.com/erikyuzwa/tiny-wiki-gem" target="_blank">Tiny Wiki</a>. All rights reserved.</p>
             <p>Powered by <a href="https://rubyonrails.org/" target="_blank">Ruby</a>, <a href="https://sinatrarb.com/" target="_blank">Sinatra</a>, and <a href="https://github.com/vmg/redcarpet" target="_blank">Redcarpet</a>.</p>
         </footer>
     </div>
